--- a/FE/public/index.html
+++ b/FE/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="/" />
     <meta charset="UTF-8" name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="description" content="React + Typescript + SSR + Code-splitting" />
