--- a/FE/public/index.html
+++ b/FE/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <base href="/" />
     <meta charset="UTF-8" name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <meta name="description" content="React + Typescript + SSR + Code-splitting" />
+    <meta name="description" content="Issue Tracker Service" />
     <meta name="google" content="notranslate" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <title>Issue Tracker</title>
